k8s/deployment/cuebot.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuebot-app
spec:
  selector:
    matchLabels:
      app: cuebot-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cuebot-app
    spec:
      containers:
        - name: cuebot-app
          image: $(IMAGE_NAME)  # REPLACE IN CI WITH IMAGE NAME AND TAG
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          resources:
            requests:
              memory: "6Gi"
              cpu: "1000m"
            limits:
              memory: "16Gi"
              cpu: "4000m"
      imagePullSecrets:
        - name: gitlab-docker-registry-compiltwine

---

apiVersion: v1
kind: Service
metadata:
  name: cuebot-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: cuebot-app
