k8s/deployment/cuebot.ingress.yaml
# All the connection to the cuebot is done throught the port 80 without tls
# that's why we are using spec.routes (and spec.routes.permitInsecure)
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cuebot-ingress
spec:
  routes:
  - services:
    - name: cuebot-service
      port: 8443
      protocol: h2c
  - conditions:
    - prefix: /
    permitInsecure: true
    services:
    - name: cuebot-service
      port: 8443
      protocol: h2c
  virtualhost:
    fqdn: cuebot.helix.ubisoft.org
